html/css calc. maybe change to generate grid w/js->push objects from array?

--- a/style.css
+++ b/style.css
@@ -1,1 +1,50 @@
+body{
+    font-family: sans-serif;
+    background-color: aqua;
+    display: block;
+}
 
+.calc{
+    display: grid;
+    background-color: aliceblue;
+    width: 300px;
+    height: 380px;
+    margin: 30px auto;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 15px;
+    padding: 20px;
+}
+
+
+#display{
+    height: 30px;
+    margin: 10px 30px;
+    border: solid 2px black;
+    font-size: 20px;
+    text-align: right;
+    border-radius: 3px;
+}
+
+
+.inputs{
+    display: grid;
+    grid-template-columns: repeat(4, 60px);
+    grid-template-rows: repeat(5, 50px);
+    grid-column-gap: 14px;
+    grid-row-gap: 10px;
+    width: 282px;
+    height: 290px;
+    border: 1px solid black;
+    padding: 20px;
+
+
+}
+
+#equal{
+    grid-row: span 2;
+}
+
+#zero{
+    grid-column: span 2;
+}
